# logstack

./: .gitignore  .gitmodules  CMakeLists.txt  README.markdown  cost.hs  gold  lan.sh  results.xlsm  wan.sh  wan300.sh
p/: Makefile  abstract.tex  approach.tex  candidate-blogb-fix.tex  custom.bib  evaluation.tex  gadgetfig.tex  instantiation.tex  intro.tex  intuition.tex  lowerbound.tex  macros.tex  notation.tex  note  overview.tex  p.tex  prelims.tex  proof.tex  relwork.tex  sketchurl  space.tex  supplementary.tex  techoverview.tex
p/bib/: bib.bib
p/fig/: gbl-De-alg.tex  gbl-En-alg.tex  nested.tex  optimized.tex  seed-tree.tex  simulator_prv.tex  sketch.tex  trans-ev.tex  trans-gb.tex  trans-sim.tex  vector.tex
src/: circuit.cc  circuit.h  compiler.cc  compiler.h  gate.cc  gate.h  gen.cc  gen.h  main.cc  netlist.cc  netlist.h  prf.cc  prf.h  prg.h  protocol.cc  protocol.h  scheme.cc  scheme.h  sha256.h  test.cc  u32.h
